--- a/plans.html
+++ b/plans.html
@@ -78,6 +78,7 @@
         </div>
       </div>
       </footer>
+      <script src="script.js"></script>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
         AOS.init({
