adding a working clock, and making the code a bit cleaner. might add a back to top button in the futur

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <a href="plans.html" data-aos="fade-right"><p>Plans</p></a>
         <a href="contact.html" data-aos="fade-right"><p>Contact</p></a>
       </div>
+        <div id="paddingl"></div>
+      <div class="topnav_color" data-aos="zoom-out">
+        <a data-aos="fade-in"><p id="clock" onload="currentTime()"></p></a>
+      </div>
     </div>
     <section>
       <h1 data-aos="fade-right">Solutions</h1>
