--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
           <i style="padding-left: 47.5vh;">&copy; Copyright 2021-<script>
             document.write(new Date().getFullYear())
           </script> Florian Braun</i>
-          <b class="blueuk" style="padding-left: 52.5vh;">We Stand </b><b class="yellowuk">With Ukraine</b>
+          <b style="padding-left: 52.5vh; color: #0057b7;">We Stand </b><b style="color: #ffd700;">With Ukraine</b>
         </div>
       </div>
       </footer>
