small style changes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <a href="plans.html" data-aos="fade-right"><p>Plans</p></a>
         <a href="contact.html" data-aos="fade-right"><p>Contact</p></a>
       </div>
-        <div id="paddingl"></div>
-      <div class="topnav_color" data-aos="zoom-out">
+      <div style="padding-left: 87vh;">
         <a data-aos="fade-in"><p id="clock" onload="currentTime()"></p></a>
       </div>
     </div>
@@ -104,7 +103,7 @@
         <i style="padding-left: 47.5vh;">&copy; Copyright 2021-<script>
           document.write(new Date().getFullYear())
         </script> Florian Braun</i>
-        <b class="blueuk" style="padding-left: 52.5vh;">We Stand </b><b class="yellowuk">With Ukraine</b>
+        <b style="padding-left: 52.5vh; color: #0057b7;">We Stand </b><b style="color: #ffd700;">With Ukraine</b>
       </div>
     </div>
     </footer>
